Fixed syntax error in package.json-> single to double quotes

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": 'https://github.com/__github_account__/__name__'
+    "url": "https://github.com/__github_account__/__name__"
   },
   "keywords": [
     "green-bot",
