--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "__name__",
-  "description":"__description__",
+  "name": "health_survey",
+  "description": "A patient health survey",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "bundle exec ruby bot.rb",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/__github_account__/__name__"
+    "url": "https://github.com/howethomas/health_survey"
   },
   "keywords": [
     "green-bot",
@@ -16,7 +16,7 @@
     "bot",
     "bashbot"
   ],
-  "author": "__author__",
+  "author": "Thomas Howe",
   "license": "MIT",
   "version": "0.1.0"
 }
